# intw

./: .gitignore  CMakeLists.txt  README.md  README_CMAKE.md  README_compilation.md  ford-doc.md  index.html  search.html
cmake/: SetTriFS.cmake  (+10 more)
src/QEtoINTW/: CMakeLists.txt  Makefile.bak  pw2intw.f90  pw2intw.f90_g
src/QEtoINTW/6.6/: Makefile.in  create_intw_q_dirs.f90  pw2intw.f90
src/QEtoINTW/6.7+/: CMakeLists.txt_intw  Makefile_intw  pw2intw.f90
src/QEtoINTW/6.7.0/: CMakeLists.txt  pw2intw.f90
src/QEtoINTW/6.7MaX/: .gitignore  CMakeLists.txt_intw  CMakeLists.txt_intw.in  Makefile.in  Makefile_intw  create_intw_q_dirs.f90  pw2intw.f90
src/QEtoINTW/6.8/: CMakeLists.txt_intw  CMakeLists.txt_intw.in  Makefile.in  Makefile_intw  create_intw_q_dirs.f90  pw2intw.f90
src/QEtoINTW/modules/: pw2intw_io.f90  pw2intw_utils.f90  pw2intw_write.f90
src/modules/: .dvqpsi_us_only.f90.swp  CMakeLists.txt  DM_Rp2q.f90  DM_q2Rp.f90  G_ReRpw2kqw.f90  G_kqw2ReRpw.f90  G_kqw2kqb.f90  H_Rew2kb.f90  H_kb2Rew.f90  Makefile  Makefile.bak  Makefile.dep  W90_to_intw.f90  add_m_nu_lambda_text.f90  add_q_m_nu.f90  all_wfcs.f90  allocate_nlpot.f90  allocate_phq.f90  arpack_interface.f90  becmod.f90  cfftnd.f90  crys_to_cart.f90  dft_fftw.f90  dvqpsi_us_only.f90  dvqpsi_us_only_haritz.f90  eliashberg.f90  fft-k.f90  fft.f90  fft_interp.f90  force_linearity_G.f90  gaussian.f90  geometry.f90  gk_sort.f90  haritz.f90  imselfen2reselfen_t0.f90  init_KB_projectors.f90  init_pp.f90  init_us_1.f90  init_us_2.f90  input_parameters.f90  (+49 more)
src/modules/old/: #symmetries.f90#  adddvscf.ps  analyse_band_structure.f90  atom.f90  band_crossing.f90  chi_0.f90  dawson.f90  density_of_states.f90  dvqpsi_us_only.f90_  haritz.f90  intw_pseudo.f90  intw_pseudo_original.f90  krakro_peio.f90  kramers_kronig.f90  new_interpolate.f90  plane_wave_interpolate.f90  plane_wave_setup.f90  pseudo_types.f90  qvan2.f90  radial_grids.f90  read_upf_v1.f90  read_upf_v2.f90  reading.f90  selfeliash_calculate_froga_ondo.f90  selfeliash_calculate_original.f90  spectral_function_im_re_selfen.f90  symmetries.f90_  symmetries_asier.f90  symmetries_original.f90  tests.f90  tetra.f90  tria_diag.f90  tria_diag_good.f90  upf.f90  us.f90  uspp.f90  vlocal.f90  write_upf_v2.f90
src/siesta2intw/: CMakeLists.txt
src/siesta2intw/4.1.5/: Makefile.in  siesta2intw.F  siesta2intw_fft.f90  siesta2intw_io.f90  siesta2intw_kbcos.sh  siesta2intw_ph.f90  siesta2intw_pp.f90  siesta2intw_symmetry.f90  siesta2intw_utils.F90  siesta2intw_write.F90
src/siesta2intw/5.0.0/: CMakeLists.txt.in  siesta2intw.F  siesta2intw_io.f90  siesta2intw_pp.f90  siesta2intw_utils.F90  siesta2intw_write.F90
src/siesta2intw/5.0.1/: CMakeLists.txt.in  siesta2intw.F
src/siesta2intw/5.0.2/: siesta2intw.F
src/siesta2intw/5.2.0/: siesta2intw.F
src/siesta2intw/5.2.1/: CMakeLists.txt.in
src/siesta2intw/5.2.2/: CMakeLists.txt.in
src/siesta2intw/doc/: .gitignore  doc-haritz.tex  siesta_intw.md  time-reversal-notes.txt
src/siesta2intw/modules/: cfftnd.f90  siesta2intw_fft.f90  siesta2intw_io.f90  siesta2intw_ph.f90  siesta2intw_pp.f90  siesta2intw_write.F90
src/siesta2ph/: CMakeLists.txt
src/siesta2ph/4.1.5/: Makefile.in  siesta2dv.F90  siesta2fc.F90  siesta2ph.F90  siesta2ph_io.f90  siesta2ph_symmetry.f90  siesta2ph_utils.f90
src/siesta2ph/5.0.0/: CMakeLists.txt.in  siesta2dv.F90  siesta2fc.F90  siesta2ph.F90  siesta2ph_io.f90  siesta2ph_linalg.F90  siesta2ph_system.f90  spglib_f08.f90
src/siesta2ph/5.0.1/: CMakeLists.txt.in  siesta2fc.F90
src/siesta2ph/5.0.2/: CMakeLists.txt.in  siesta2fc.F90  siesta2ph.F90
src/siesta2ph/5.2.0/: CMakeLists.txt.in  siesta2dv.F90  siesta2ph.F90
src/siesta2ph/5.2.1/: siesta2dv.F90  siesta2fc.F90
src/siesta2ph/5.2.2/: CMakeLists.txt.in  siesta2dv.F90
src/siesta2ph/modules/: siesta2ph_io.f90  siesta2ph_linalg.F90  siesta2ph_symmetry.f90  siesta2ph_system.f90
src/siesta2ph/utils/: run-disps.bash.in
src/utilities/: CMakeLists.txt  Makefile  a2F_on_trFS.f90  add_local_pp.f90  add_pp_local_Fe_1ML_MgO_Ag100.f90  add_pp_local_Fe_1ML_MgO_Ag100_ONE_FE.f90  add_pp_local_example.f90  bands_interpol.f90  density_calculation.f90  density_z_calculation.f90  dv_hand.f90  dv_hand_Fe_1ML_MgO_Ag100.f90  dv_hand_example.f90  dv_qe.f90  dv_qe_Fe_1ML_MgO_Ag100.f90  eliashberg_full.f90  eliashberg_full_no_spin.f90  eliashberg_full_no_spin_omega_omegap.f90  eliashberg_quasiel.f90  ep_interp_on_trFS_dV.f90  ep_interp_on_trFS_nufft.f90  ep_interp_on_trFS_wannier.f90  ep_melements.f90  ep_melements_K.f90  ep_melements_haritz.f90  ep_melements_haritz_Fe.f90  ep_melements_haritz_Fe_1ML_MgO_Ag100.f90  ep_melements_haritz_Fe_1ML_MgO_Ag100_ONE_FE_initial_pp_is_1_iband_1274_1.f90  ep_melements_haritz_Fe_1ML_MgO_Ag100_ONE_FE_initial_pp_is_1_iband_1274_2.f90  ep_melements_haritz_Fe_1ML_MgO_Ag100_initial_1_pp_is1_iband_1288.f90  ep_melements_haritz_Fe_1ML_MgO_Ag100_initial_2_pp_is1_iband_1288.f90  ep_melements_haritz_Fe_MPI.f90  ep_melements_haritz_Fe_nl_is_1_iband_1274_1.f90  ep_melements_haritz_Fe_serial.f90  ep_melements_haritz_Fe_vl_is_1_iband_1274_1.f90  ep_melements_haritz_Fe_vl_is_1_iband_1274_2.f90  ep_melements_haritz_example_MPI.f90  ep_melements_haritz_example_proba.f90  ep_melements_haritz_nl_example.f90  ep_melements_haritz_vl_example.f90  (+79 more)
test/: CMakeLists.txt  README.md
test/module/: test_module.f90
test/test_IO/: CMakeLists.txt  intw.in  read_data.f90  read_input.f90
test/test_IO/qe/: .gitignore  Cu.RRKJ3.UPF  cu.scf.in  pw2intw.in
test/test_dummy/: CMakeLists.txt  simple_test.bash  simple_test.f90  simple_test.py
test/test_matrix-elements/: CMakeLists.txt  matrix-element-test.bash.in
test/test_matrix-elements/Cu-fullmesh/: intw.in  matrix-element-test.bash.in
test/test_matrix-elements/Cu-qpoint-fullmesh/: intw.in  matrix-element-test.bash.in
test/test_matrix-elements/Cu-qpoint-sym/: intw.in
test/test_matrix-elements/Fe-O/: Makefile.in  intw.in  matrix-element-test.bash  matrix-element-test.bash.in
test/test_matrix-elements/GaAs-fullmesh/: intw.in
test/test_mmn/: CMakeLists.txt
test/test_w902intw/: CMakeLists.txt
(+543 files in other folders)
