include(ExternalProject)

add_executable(pw2intw.x pw2intw.f90)

set(QE_LAST_BUILD_DIR ${QE-LAST_HOME}/build/)

target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/../include)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/PP/mod/qe_pp_pw2gw_exe)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/PW/mod/qe_pw)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/Modules/mod/qe_modules)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/fsys/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/utils/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/common/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/dom/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/wxml/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/external/fox/sax/mod/FoX_fsys)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/UtilXlib/mod/qe_utilx)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/PP/mod/qe_pp)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/FFTXlib/mod/qe_fftx)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/upflib/mod/qe_upflib)
target_include_directories( pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/XClib/mod/qe_xclib)

target_link_libraries(pw2intw.x PRIVATE MPI::MPI_Fortran)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_pw.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_modules.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_pp.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_fftx.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_upflib.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_xclib.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_pw.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_kssolver_davidson.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_kssolver_cg.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_kssolver_ppcg.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_kssolver_paro.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_kssolver_dense.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_dftd3.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_modules.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libmbd.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_fftx.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_upflib.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_dom.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_sax.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_wxml.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_common.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_utils.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libFoX_fsys.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_xclib.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_libbeef.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_lax.a)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_utilx.a)
#target_link_libraries(pw2intw.x PRIVATE MPI::MPI_Fortran)
target_link_libraries(pw2intw.x PRIVATE ${QE_LAST_BUILD_DIR}/lib/libqe_clib.a)
target_link_libraries(pw2intw.x PRIVATE ${LAPACK_LIBRARIES})
target_compile_definitions( pw2intw.x PRIVATE __MPI)
